--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-.vscode/
-env/
-__pycache__/
+*.py[cod]
+*.egg
+*.egg-info
+dist
+build/*
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+*env
+.coverage
+.pytest_cache
+
+!docs/build/html/*
+docs/build/html/*
+!docs/build/html/_static/
+!docs/build/html/_images/
+!docs/build/html/*.html
+!docs/build/html/*.css
+!docs/build/html/*.scss
+!docs/build/html/*.js
+!docs/build/html/*.png
+!docs/build/html/.nojekyll
